<resources>
    <string name="app_name">Sigma Demo</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_categories">Categories</string>
    <string name="text_my_account">My Account</string>
    <string name="text_logout">Logout</string>
    <string name="text_home">Home</string>
    <string name="text_first_name">First Name</string>
    <string name="text_">Last Name</string>
    <string name="text_update">Update</string>
    <string name="text_city">City</string>
    <string name="text_postcode">Postcode</string>
    <string name="text_contact_number">Contact Number</string>
</resources>