<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.dvl.sigma.ui.login.LoginViewModel" />

    </data>

    <RelativeLayout
        style="@style/loginParent"
        android:orientation="vertical">

        <ScrollView style="@style/parent">

            <RelativeLayout style="@style/parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:layout_weight="3"
                        android:background="@drawable/login_header_shape_bk"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="357dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:text="@string/app_name" />

                    <androidx.cardview.widget.CardView

                        style="@style/loginCard"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:background="@color/whiteCardColor"
                        android:elevation="5dp"
                        app:cardCornerRadius="@dimen/_16sdp">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/_16sdp">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:layout_marginTop="@dimen/_16sdp"
                                android:text="@string/login" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputEmail"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/_16sdp">

                                <EditText
                                    android:id="@+id/editTextEmail"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/email"
                                    android:text="@={viewmodel.email}"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputPassword"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/_16sdp">

                                <EditText
                                    android:id="@+id/editTextPassword"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:text="@={viewmodel.password}"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                style="@style/viewParent"
                                android:layout_gravity="end"
                                android:layout_marginTop="10dp"
                                android:text="@string/forgot_password"
                                android:textColor="@color/primaryTextColor"
                                android:textSize="@dimen/_9ssp" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnLogin"
                                style="@style/loginButton"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/_16sdp"
                                android:text="@string/login" />

                            <TextView
                                style="@style/parent"
                                android:layout_marginTop="@dimen/_16sdp"
                                android:text="@string/don_t_have_an_account_sign_up"
                                android:textAlignment="center"
                                android:textColor="@color/primaryTextColor"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_baseline_close_24"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>


